--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -2,7 +2,7 @@ server{
 		listen 80;
 		
 		location /ridesharingservice {
-			proxy_pass http://ride-sharing-service:8080;
+			proxy_pass http://${API}:8080;
 		}
 		
 		location /rating {
